--- a/Login.html
+++ b/Login.html
@@ -14,7 +14,8 @@
       justify-content: center;
       align-items: center;
       min-height: 100vh; /* Ensure body covers full screen height */
-      background: url('https://images.unsplash.com/photo-1464226184884-fa280b87c399?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80') no-repeat center center/cover fixed; /* Fixed background */
+      background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), 
+      url('https://images.unsplash.com/photo-1464226184884-fa280b87c399?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80') no-repeat center center/cover fixed; /* Fixed background */
       color: #333;
     }
 
